2002-01-15  Adrian Aichner  <adrian@xemacs.org>

	* event-msw.c (mswindows_wnd_proc): Add handling of WM_SHOWWINDOW
	to fix problem switching between virtual desktops under virtuawin
	virtual window manager.

2002-01-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (global):
	(syms_of_mule_charset):
	(complex_vars_of_mule_charset):
	Declare and initialize Vcharset_latin_iso8859_15.

	* mule-charset.h (LEADING_BYTE_OFFICIAL_1): Add LATIN_ISO8859_15.

2002-01-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.4 "bamboo" is released.

2001-07-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* config.h.in (IPV6_CANONICALIZE): New #define for --with-ipv6-lookup.
	* process-unix.c (unix_canonicalize_host_name):
	sysdep.c (init_system_name):
	Use it to conditionally support IPv6 canonicalization.

2002-01-04  Martin Buchholz  <martin@xemacs.org>

	* keymap.c (define_key_alternate_name): Parenthesize EQ.

2001-12-22  William M. Perry  <wmperry@gnu.org>

	* glyphs-gtk.c (gtk_xpm_instantiate): Don't bother doing the
	xpm-color-symbols checks, they are impossible to implement with
	GTK's XPM implementation. :(

2001-12-13  William M. Perry  <wmperry@gnu.org>

	* select-gtk.c (gtk_own_selection): Update to follow the new
	method signature.  Ignore owned_p as it appears to only be used
	for motif hacks.

	* redisplay-gtk.c (gtk_output_string): Fixed some warnings about
	signed/unsigned comparison.
	(gtk_output_gdk_pixmap): Remove clipping code as per change by
	andy@xemacs.org to the X11 code.
	(gtk_output_pixmap): Make this follow the output_pixmap method
	conventions and expose it.
	(gtk_output_horizontal_line): Renamed from output_hline, and
	expose it in our method structure.
	(gtk_ring_bell): Don't ring the bell if volume <= 0

	* toolbar-gtk.c (gtk_output_toolbar_button): 
	(gtk_output_frame_toolbars): 
	(gtk_redraw_exposed_toolbars): 
	(gtk_redraw_frame_toolbars): These are now just aliases for the
	common_XXX() routines in toolbar-common.c
