@@ -1,3 +1,13 @@
+2002-01-19  Jan Vroonhof  <jan@xemacs.org>
+
+	* cmdloop.c: New variable Qdisabled_command_loop.
+			Move Vdisabled_command_loop declaration here.
+	* cmdloop.c (syms_of_cmdloop): Declare Qdisabled_command_loop.
+	* eval.c (Fcommand_execute): Use the value of the symbol not
+		the value of the value as the hook to run.
+	* event-stream.c: Remove declaration of Vdisabled_command_loop
+	* lisp.h: Declare Qdisabled_command_loop
+
 2002-01-15  Adrian Aichner  <adrian@xemacs.org>
 
 	* event-msw.c (mswindows_wnd_proc): Add handling of WM_SHOWWINDOW
